fixed spacing issues

--- a/snowflake-inspector/src/css/style.css
+++ b/snowflake-inspector/src/css/style.css
@@ -1,8 +1,14 @@
 #hierarchy-vis {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   overflow: hidden;
 }
+
+.container-fluid {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 .queryStyle {
   height: 300px;     
   overflow: -moz-scrollbars-vertical;          
